2014-07-22 Ethan A Merritt  <merritt@u.washington.edu>

	* src/gp_types.h src/plot2d.c (store2d_point):
	INRANGE/OUTRANGE refer to points that are inside/outside the plot
	boundaries as defined by xrange, yrange, etc.  They fail to handle
	points that are outside theta range limits given for polar data.
	That is, a point may be outside of trange [pi/2:pi] even though it
	would lie well inside the plot boundaries if drawn.
	Add a new category EXCLUDEDRANGE for such points. 

	* src/graphics.c (plot_impulses):  Test for EXCLUDEDRANGE data points
	so that set trange [theta_min:theta_max] actually does something.
	Bug #1439

	* demo/poldat.dem:  Make sure trange includes the whole plot.

2014-07-18 Ethan A Merritt  <merritt@u.washington.edu>

	* demo/Makefile.am.in: Do not create a symlink to GNUPLOT_X11 in the
	build directory during "make check". This was probably intended to 
	handle the rare case of ./configure --program-suffix=foo but it breaks
	the more common case of configuring on a system without x11 support
	and then running "make check" twice.
	Bugfix

2014-07-14 Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/save.c src/set.c src/gadgets.h:
	Continue to recognize "set style increment user" even though it has
	been deprecated in favor of "set linetype".
	Bug #1411 (not really a bug)

2014-07-12 Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (check_for_iteration):  Fix failure to detect some loop
	[start:end:increment] combinations that should be executed only once
	or not executed at all.
	Bug #1441

2014-07-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_dummy):  More sanity checks on "set dummy" syntax.
	Bug #1442

2014-07-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (load_tic_user):  "set Xtics ()" should clear the list
	of user-specified tics rather than setting tic generation to auto.

2014-07-04  Shigeharu Takeno  <shige@iee.niit.ac.jp>
