@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.896 2014/06/25 05:45:21 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.897 2014/07/05 00:05:58 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -9844,13 +9844,14 @@ Ffigure_missing
  on the most recent plot within the multiplot (like replot does).
 
  Syntax:
-       set mouse {doubleclick <ms>} {nodoubleclick} \
-                 {{no}zoomcoordinates} \
-                 {noruler | ruler {at x,y}} \
-                 {polardistance{deg|tan} | nopolardistance} \
-                 {format <string>} \
-                 {mouseformat <int>/<string>} \
-                 {{no}labels {"labeloptions"}} \
+       set mouse {doubleclick <ms>} {nodoubleclick}
+                 {{no}zoomcoordinates}
+                 {zoomfactors <xmultiplier>, <ymultiplier>}
+                 {noruler | ruler {at x,y}}
+                 {polardistance{deg|tan} | nopolardistance}
+                 {format <string>}
+                 {mouseformat <int>/<string>}
+                 {{no}labels {"labeloptions"}}
                  {{no}zoomjump} {{no}verbose}
        unset mouse
 
